--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.48",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
