--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.48",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "body-parser": "^1.20.0",
@@ -19,12 +18,13 @@
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "jsonschema": "^1.4.1",
+    "pm2": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "swagger-ui": "^4.14.0",
     "swagger-ui-express": "^4.5.0",
-    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -66,5 +66,10 @@
   "bugs": {
     "url": "https://github.com/Buraillc/the-virtualwards/issues"
   },
-  "homepage": "https://github.com/Buraillc/the-virtualwards#readme"
+  "homepage": "https://github.com/Buraillc/the-virtualwards#readme",
+  "devDependencies": {
+    "@types/node": "^18.7.14",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
+  }
 }
