--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "async": "3.2.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "jsonschema": "^1.4.1",
+    "os": "0.1.2",
     "pm2": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
