--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jasmine",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -71,6 +71,7 @@
   "homepage": "https://github.com/Buraillc/the-virtualwards#readme",
   "devDependencies": {
     "@types/node": "^18.7.14",
+    "jasmine": "4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
