--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "async": "3.2.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "crypto": "1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "6.0.0",
     "jsonschema": "^1.4.1",
+    "mongoose": "6.6.1",
     "os": "0.1.2",
     "pm2": "^5.2.0",
     "react": "^18.2.0",
