--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "1.17.3",
     "helmet": "6.0.0",
     "jsonschema": "^1.4.1",
     "mongoose": "6.6.1",
